# FitFlOOW

./: .gitattributes  .gitignore  fitfloow_product_spec.md  project_context.md
backend/: .env  Cargo.toml
backend/migrations/: 20260701000000_init.sql  20260701000001_exercises.sql  20260701000002_password_reset.sql  20260702000000_workout_templates.sql  20260702000001_profile_fields.sql  20260702000002_indexes.sql  20260702000003_cascade.sql  20260702000004_body_weight.sql
backend/src/: db.rs  main.rs  middleware.rs  routes.rs
frontend/LOGIN/: index.html  package-lock.json  package.json  step1.json
frontend/LOGIN/src/: index.css
frontend/Landiingpage/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/Landiingpage/LANDINGPAGE/: 0_role.md  10step_gallery_section.md  11step_cta_section.md  12step_footer.md  13step_final_polish.md  14step_strict_anti_hallucination_rules.md  1step_anyslize_the_imaeg.md  2step_build_hero_section.md  3step_generate_second_section_from_reference_image.md  4step_implement_generated_src.md  5step_create_next_section.md  6step_create_3d_visuals.md  7step_video_section.md  (+2 more)
frontend/LandingPage/: .env.development  package-lock.json  package.json  vite.config.js
frontend/_deprecated_pages/: Dashboard.css  ForgotPasswordPage.jsx  LoginPage.css  MembershipPage.css  MembershipPage.jsx  NotFoundPage.jsx  NotificationsPage.jsx  OnboardingPage.jsx  ProgressPage.css  SignupPage.jsx  WorkoutDetailPage.css  WorkoutDetailPage.jsx  WorkoutLogPage.jsx  WorkoutsPage.jsx
(+111 files in other folders)
