[package]
name = "fitfloow-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "macros", "chrono", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
tower-http = { version = "0.5", features = ["cors", "compression-full"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tower_governor = "0.4"
regex = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

